# canai

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
canai/: canai.py
canai/detectors/: ai_detector.py
canai/project_utils/: realsense_camera.py  video_recorder.py  web_camera.py
canai/stream/: video_stream_handler.py
configs/: app_config.yaml  realsense_config.yaml  webcam_config.yaml
project_utils/: realsense_camera.py  video_recorder.py  web_camera.py
stream/: object_detection_app.py
